--- a/Makefile.win
+++ b/Makefile.win
@@ -1,4 +1,8 @@
-FLAGS=-static-libgcc -static-libstdc++ -Wl,-Bstatic -static -shared -std=c++17 -Ithirdparty/picojson
+#
+# Mingw makefile for the launcher
+#
+
+FLAGS=-static-libgcc -static-libstdc++ -Wl,-Bstatic -static -std=c++17 -Ithirdparty/picojson
 FLAGS32=-m32
 DEFINES=-D_WIN32 -DWINDOWS -DWIN32 -D_WINDOWS -DWIN64 -D_WIN64
 LIBS=-lpsapi -lkernel32
@@ -6,10 +10,10 @@ SRC=$(wildcard src/*.cc)
 
 all: 
 	mkdir -p bin 
-	x86_64-w64-mingw32-g++ -o bin/source2test.dll $(FLAGS) $(DEFINES) $(SRC) $(LIBS)
+	x86_64-w64-mingw32-g++ -o bin/hlvrlaunch.exe $(FLAGS) $(DEFINES) $(SRC) $(LIBS)
 
 clean:
 	rm -rf bin
 
 install: all
-	cp bin/source2test.dll /usr/local/bin/
+	cp bin/hlvrlaunch.exe /media/LocalDisk/Half-Life\ Alyx/game/bin/win64/
