--- a/src/modules/launcher/Makefile.win
+++ b/src/modules/launcher/Makefile.win
@@ -1,12 +1,25 @@
+#
+# Makefile for the launcher DLL 
+#
+
 FLAGS=-static-libgcc -static-libstdc++ -Wl,-Bstatic -static -shared 
+
 FLAGS32=-m32
+
 DEFINES=-D_WIN32 -DWINDOWS -DWIN32 -D_WINDOWS -DWIN64 -D_WIN64
+
 LIBS=-lpsapi -lkernel32
+
 SRC=$(wildcard src/*.cc)
 
-all: 
+DLLNAME=extlauncher.dll
+
+all:
 	mkdir -p bin 
-	x86_64-w64-mingw32-g++ -o bin/extlauncher.dll $(FLAGS) $(DEFINES) $(SRC) $(LIBS)
+	x86_64-w64-mingw32-g++ -o bin/$(DLLNAME) $(FLAGS) $(DEFINES) $(SRC) $(LIBS)
+	mkdir -p include
+	cp src/launcher_public.h ./include
+
 
 clean:
 	rm -rf bin
